--- a/tst.html
+++ b/tst.html
@@ -23,22 +23,20 @@
     <body>
         <article class="container-fluid position-relative">
             <section class="row flex-row flex-nowrap ex" style="overflow-x: scroll;">
-                <section class="col-10 col-sm-5 col-md-4 col-lg-3 col-xl-2 m-2" style="display: inline-block;background-color: #e65100;height: 200px;">hello</section>
-                <section class="col-10 col-sm-5 col-md-4 col-lg-3 col-xl-2 m-2" style="display: inline-block;background-color: #124e78;height: 200px;">hello</section>
-                <section class="col-10 col-sm-5 col-md-4 col-lg-3 col-xl-2 m-2" style="display: inline-block;background-color: #f0f0c9;height: 200px;">hello</section>
-                <section class="col-10 col-sm-5 col-md-4 col-lg-3 col-xl-2 m-2" style="display: inline-block;background-color: #f2bb05;height: 200px;">hello</section>
-                <section class="col-10 col-sm-5 col-md-4 col-lg-3 col-xl-2 m-2" style="display: inline-block;background-color: #6e0e0a;height: 200px;">hello</section>
+                <section class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-2 m-2" style="display: inline-block;background-color: #e65100;height: 200px;">hello</section>
+                <section class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-2 m-2" style="display: inline-block;background-color: #124e78;height: 200px;">hello</section>
+                <section class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-2 m-2" style="display: inline-block;background-color: #f0f0c9;height: 200px;">hello</section>
+                <section class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-2 m-2" style="display: inline-block;background-color: #f2bb05;height: 200px;">hello</section>
+                <section class="col-6 col-sm-5 col-md-4 col-lg-3 col-xl-2 m-2" style="display: inline-block;background-color: #6e0e0a;height: 200px;">hello</section>
                 <section class="position-absolute top-50">
-                    <div class="position-absolute start-0 translate-middle-y">
+                    <div style="border-radius: 100%;background-color: #f2bb05;" class="position-absolute start-0 translate-middle-y">
                         <img src="./left.svg" alt="" width="50px">
                     </div>
-                    <div class="position-absolute end-0 translate-middle-y">
+                    <div style="border-radius: 100%;background-color: #f2bb05;" class="position-absolute end-0 translate-middle-y">
                         <img src="./right.svg" alt="" width="50px">
                     </div>
                 </section>
-        </section>
-        
+            </section>
         </article>
-                
     </body>
 </html>
