--- a/tst.html
+++ b/tst.html
@@ -49,7 +49,7 @@
 
             function scrolled(thise){
 
-                var e=thise.children[5];
+                var e=thise.lastElementChild;
                 var left=e.children[0];
                 var right=e.children[1];
 
